# soundpad

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cpp  Config.hpp  Font.cpp  Font.hpp  Help.hpp  Pad.cpp  Pad.hpp  README.md  Utils.cpp  Utils.hpp  conanfile.txt  main.cpp  preface.hpp  soundpad.hpp
res/: soundpad.desktop.in  soundpad.rc.in
